# imgui-autoit-retained

./: .gitignore  CMakeLists.txt  README.md
autoit/: imgui_generated.au3  imgui_retained.au3
autoit/exemples/: exemple100_createwindow.au3  exemple101_iswindowappearing.au3  exemple102_iswindowcollapsed.au3  exemple103_iswindowfocused.au3  exemple104_iswindowhovered.au3  exemple105_iswindowhoveredex.au3  exemple106_getwindowpos.au3  exemple107_getwindowsize.au3  exemple108_setwindowpos.au3  exemple109_setwindowsize.au3  exemple10_textlinkopenurl.au3  exemple110_setwindowsizeconstraints.au3  exemple111_setwindowcontentsize.au3  exemple112_setwindowcollapsed.au3  exemple113_setwindowfocus.au3  exemple114_setwindowbgalpha.au3  exemple115_setwindowscroll.au3  exemple116_getscrollx.au3  exemple117_getscrolly.au3  exemple118_getscrollmaxx.au3  exemple119_getscrollmaxy.au3  exemple11_checkbox.au3  exemple120_setscrollx.au3  exemple121_setscrolly.au3  exemple122_setscrollherex.au3  exemple123_setscrollherey.au3  exemple124_setscrollfromposx.au3  exemple125_setscrollfromposy.au3  exemple126_menubar.au3  exemple127_menu.au3  exemple128_menuitem.au3  exemple129_mainmenubar.au3  exemple12_checkboxflags.au3  exemple130_tabbar.au3  exemple131_tabitem.au3  exemple132_tabitembutton.au3  exemple133_settabitemclosed.au3  exemple134_treenode.au3  exemple135_collapsingheader.au3  exemple136_setnextitemopen.au3  (+161 more)
dll/src/: bool_extras.cpp  combo_widget.cpp  debug_inline_extras.cpp  debug_inline_extras.h  dll_api.cpp  dllmain.cpp  e2_extras.cpp  e2_extras.h  font_extras.cpp  font_extras.h  hover_extras.cpp  hover_extras.h  image_extras.cpp  image_extras.h  input_double_extras.cpp  input_double_extras.h  input_text.cpp  list_widget.cpp  plot_widget.cpp  popup_extras.cpp  popup_extras.h  progress_bar.cpp  radio_group_extras.cpp  radio_group_extras.h  render_thread.cpp  render_thread.h  selectable_widget.cpp  tab_extras.cpp  tab_extras.h  table_extras.cpp  table_extras.h  text_link_extras.cpp  text_link_extras.h  texture_loader.cpp  texture_loader.h  tooltip_extras.cpp  tooltip_extras.h  tree_extras.cpp  tree_extras.h  utf.cpp  (+8 more)
dll/tools/: generate.py
